# cours_algo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
TDS/: draft.ipynb
TDS/ESGI_1A/: Correction TD partie 3.ipynb  Correction partie 1.ipynb  Correction partie 2.ipynb  TD Partie 4 - tri.ipynb  TD géométrie.ipynb  TD partie 3.ipynb
TDS/ESGI_3A/: 1_bases.ipynb  2_hashtable.ipynb  5_arbres.ipynb  Exo libre.ipynb  TD tri.ipynb  autres exercices.ipynb
TDS/ESGI_3A/local_lib/: base.py
config/: migrated
config/custom/: custom.css
config/lab/user-settings/@jupyterlab/apputils-extension/: notification.jupyterlab-settings
config/lab/workspaces/: auto-i-81a0.jupyterlab-workspace  auto-i-f4c2.jupyterlab-workspace  default-37a8.jupyterlab-workspace
content/: draft.ipynb
content/ESGI_1A/: Correction TD partie 3.ipynb  Correction partie 1.ipynb  Correction partie 2.ipynb  TD Partie 4 - tri.ipynb  TD géométrie.ipynb  TD partie 3.ipynb  algo_tris.excalidraw
content/ESGI_3A/: 1_bases-Copy1.ipynb  1_bases.ipynb  2_hashtable.ipynb  5_arbres.ipynb  Exo libre.ipynb  TD tri.ipynb  autres exercices.ipynb  definitions.py  list_emptylist_draft.ipynb
content/ESGI_3A/local_lib/: base.py  liste.py  misc.py
demo_server/: pyproject.toml
demo_server/demo_server/: settings.py  urls.py
demo_server/recorder/: admin.py  models.py  views.py
demo_server/recorder/migrations/: 0001_initial.py
other/: generate_dep_data.ipynb  post_treatment.py  remove_solutions.py
