[project]
name = "cours_algo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "jupyterlite-core==0.2.3",
    "jupyterlab~=4.1.5",
    "notebook~=7.0.7",
    "jupyterlite-pyodide-kernel==0.2.3",
    "jupyterlab-language-pack-fr-FR",
    "jupyterlab-night",
    "jupyterlab-miami-nights",
    "ipycanvas>=0.9.1",
    "gelidum>=0.7.0",
    "matplotlib>=3.8.4",
    "pydantic<2",
    "grandalf>=0.8",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Creative Commons Attribution Non Commercial Share Alike 4.0 International"}


[tool.pdm]
distribution = false

