[project]
name = "demo_server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "django>=5.1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"